Improved journal parser

--- a/sandbox/parsers.ipynb
+++ b/sandbox/parsers.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,13 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "lines = [\n",
-    "    '# Groceries',\n",
-    "    '; account equity',\n",
     "    '2024-02-02 paycheck',\n",
     "    '2024-01-07  Safeway ; weekly groceries',\n",
     "    '    income:yoyodyne      $5,000.00',\n",
@@ -41,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -119,61 +117,176 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "s = ' type: A'"
+    "Lines with tags"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = re.search(r'(.*?)type: (\\w)(.*)', s)"
+    "lines += [\n",
+    "    'account income:PERS                         ; abbrev: PERS',\n",
+    "    '2024-10-31   Rite Aid   ;    pending:',\n",
+    "    'account income:PERS                         ; abbrev: PERS feb, pending:',\n",
+    "    '2024-11-04   Apple   ;    candy crush   pending:',\n",
+    "    '2024-11-04   Apple   ;    tag1:, tag2: value, tag3:',\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2024-02-02 paycheck']\n",
+      "['2024-01-07  Safeway ', ' weekly groceries']\n",
+      "['    income:yoyodyne      $5,000.00']\n",
+      "['    income:yoyodyne      $5,000.00  ', ' Feb']\n",
+      "['account income:PERS                         ', ' abbrev: PERS']\n",
+      "['2024-10-31   Rite Aid   ', '    pending:']\n",
+      "['account income:PERS                         ', ' abbrev: PERS feb, pending:']\n",
+      "['2024-11-04   Apple   ', '    candy crush   pending:']\n",
+      "['2024-11-04   Apple   ', '    tag1:, tag2: value, tag3:']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for s in lines:\n",
+    "    # print(re.split(r'\\s+,?', s))\n",
+    "    print(s.split(';'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse(line):\n",
+    "    if ';' in line:\n",
+    "        cmnd, comment = line.split(';')\n",
+    "    else:\n",
+    "        cmnd, comment = line.rstrip(), ''\n",
+    "    if comment:\n",
+    "        for part in comment.split(','):\n",
+    "            if ':' in part:\n",
+    "                tag = re.search(r'(\\w+):', part)[1]\n",
+    "                val = part[part.index(':')+1:]\n",
+    "                print(tag, val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abbrev  PERS\n",
+      "pending \n",
+      "abbrev  PERS feb\n",
+      "pending \n",
+      "pending \n",
+      "tag1 \n",
+      "tag2  value\n",
+      "tag3 \n"
+     ]
+    }
+   ],
+   "source": [
+    "for s in lines:\n",
+    "    parse(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' '"
+       "'PERS'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "m[1] + m[3]"
+    "s.replace(',','')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'A'"
+       "<re.Match object; span=(0, 3), match='   '>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "m[2]"
+    "re.match(r'^\\s+', '   expenses:food   100.00')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-123.45"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float('-123.45')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "45"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ord('-')"
    ]
   },
   {
