Reorganize Config module

--- a/sandbox/misc.ipynb
+++ b/sandbox/misc.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "43c1e4f7",
    "metadata": {},
    "outputs": [],
    "source": [
     "from dexter.DB import DB, Entry, Category, Account\n",
-    "from dexter.config import Config\n",
+    "from dexter.config import Config, inititialize_config, load_toml_file, find_toml_file\n",
     "\n",
     "DB.init()\n",
     "DB.open('finances')"
@@ -17,6 +17,113 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "5a64741e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('/Users/conery/Projects/dexter/src/dexter/dex.toml')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "find_toml_file(None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "718d442b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conf = load_toml_file(find_toml_file(None))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5a4392e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'finances', 'start_date': '2025-01-01'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conf.get('database')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "cc8d6160",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = inititialize_config()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "af471f72",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'dexter'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Config.DB.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "bb45a9b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'description': <function <lambda>(rec)>,\n",
+       " 'date': <function <lambda>(rec)>,\n",
+       " 'amount': <function <lambda>(rec)>,\n",
+       " 'credit': <function <lambda>(rec)>}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Config.CSV.colmaps['occu']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "31a5197c",
    "metadata": {},
    "outputs": [],
@@ -30,70 +137,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ebfcfdbb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "any(lambda x: x in DB.transaction_unused for x in args.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b5f1b502",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'column'}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "DB.transaction_unused"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "87ab1f02",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'column'}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "set(args.keys()) & DB.transaction_unused"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "bd7cf23a",
    "metadata": {},
    "outputs": [],
@@ -103,253 +177,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c4d192ba",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dexter.DB.Entry"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cls"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "467e1ecc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Entry'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cls.__name__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "41626ff8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'liabilities:amex:blue': {'liabilities:amex:blue'},\n",
-       " 'blue': {'liabilities:amex:blue'},\n",
-       " 'liabilities': {'liabilities:amex:blue',\n",
-       "  'liabilities:amex:hilton',\n",
-       "  'liabilities:amex:platinum',\n",
-       "  'liabilities:chase:amazon',\n",
-       "  'liabilities:chase:freedom',\n",
-       "  'liabilities:chase:sapphire-jc',\n",
-       "  'liabilities:chase:sapphire-lc',\n",
-       "  'liabilities:chase:united',\n",
-       "  'liabilities:citi:costco',\n",
-       "  'liabilities:gsb:apple'},\n",
-       " 'amex': {'liabilities:amex:blue',\n",
-       "  'liabilities:amex:hilton',\n",
-       "  'liabilities:amex:platinum'},\n",
-       " 'liabilities:amex:hilton': {'liabilities:amex:hilton'},\n",
-       " 'hilton': {'liabilities:amex:hilton'},\n",
-       " 'liabilities:amex:platinum': {'liabilities:amex:platinum'},\n",
-       " 'platinum': {'liabilities:amex:platinum'},\n",
-       " 'liabilities:gsb:apple': {'liabilities:gsb:apple'},\n",
-       " 'apple': {'liabilities:gsb:apple'},\n",
-       " 'gsb': {'liabilities:gsb:apple'},\n",
-       " 'liabilities:chase:amazon': {'liabilities:chase:amazon'},\n",
-       " 'amazon': {'liabilities:chase:amazon'},\n",
-       " 'chase': {'liabilities:chase:amazon',\n",
-       "  'liabilities:chase:freedom',\n",
-       "  'liabilities:chase:sapphire-jc',\n",
-       "  'liabilities:chase:sapphire-lc',\n",
-       "  'liabilities:chase:united'},\n",
-       " 'liabilities:chase:freedom': {'liabilities:chase:freedom'},\n",
-       " 'freedom': {'liabilities:chase:freedom'},\n",
-       " 'liabilities:chase:sapphire-lc': {'liabilities:chase:sapphire-lc'},\n",
-       " 'sapphire-lc': {'liabilities:chase:sapphire-lc'},\n",
-       " 'liabilities:chase:united': {'liabilities:chase:united'},\n",
-       " 'united': {'liabilities:chase:united'},\n",
-       " 'liabilities:chase:sapphire-jc': {'liabilities:chase:sapphire-jc'},\n",
-       " 'sapphire-jc': {'liabilities:chase:sapphire-jc'},\n",
-       " 'liabilities:citi:costco': {'liabilities:citi:costco'},\n",
-       " 'costco': {'liabilities:citi:costco'},\n",
-       " 'citi': {'liabilities:citi:costco'}}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "DB.account_names(Category.L)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f834ff8c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<Account: <Ac liabilities:amex:blue liabilities blue>>, <Account: <Ac liabilities:amex:hilton liabilities hilton>>, <Account: <Ac liabilities:amex:platinum liabilities platinum>>, <Account: <Ac liabilities:gsb:apple liabilities apple>>, <Account: <Ac liabilities:chase:amazon liabilities amazon>>, <Account: <Ac liabilities:chase:freedom liabilities freedom>>, <Account: <Ac liabilities:chase:sapphire-lc liabilities sapphire-lc>>, <Account: <Ac liabilities:chase:united liabilities united>>, <Account: <Ac liabilities:chase:sapphire-jc liabilities sapphire-jc>>, <Account: <Ac liabilities:citi:costco liabilities costco>>]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Account.objects(category=Category.L)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "c335eb3d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['liabilities:amex:blue',\n",
-       " 'liabilities:amex:hilton',\n",
-       " 'liabilities:amex:platinum',\n",
-       " 'liabilities:gsb:apple',\n",
-       " 'liabilities:chase:amazon',\n",
-       " 'liabilities:chase:freedom',\n",
-       " 'liabilities:chase:sapphire-lc',\n",
-       " 'liabilities:chase:united',\n",
-       " 'liabilities:chase:sapphire-jc',\n",
-       " 'liabilities:citi:costco']"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "[a.name for a in Account.objects(category=Category.L)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "7b1df1da",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'assets:apple:savings',\n",
-       " 'assets:occu:buckets',\n",
-       " 'assets:occu:cd-jc',\n",
-       " 'assets:occu:cd-lc',\n",
-       " 'assets:occu:checking-jc',\n",
-       " 'assets:occu:checking-lc',\n",
-       " 'assets:occu:reservoir',\n",
-       " 'assets:occu:savings-jc',\n",
-       " 'assets:occu:savings-lc',\n",
-       " 'liabilities:amex:blue',\n",
-       " 'liabilities:amex:hilton',\n",
-       " 'liabilities:amex:platinum',\n",
-       " 'liabilities:chase:amazon',\n",
-       " 'liabilities:chase:freedom',\n",
-       " 'liabilities:chase:sapphire-jc',\n",
-       " 'liabilities:chase:sapphire-lc',\n",
-       " 'liabilities:chase:united',\n",
-       " 'liabilities:citi:costco',\n",
-       " 'liabilities:gsb:apple'}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "DB.real_accounts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "1d4ed134",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Interest Income§Credit Interest',\n",
-       " 'Transfer to PayPal§PAYPAL INSTANT TRANSFER - INST XFER',\n",
-       " 'Interest Income§Credit Interest',\n",
-       " 'Interest Income§Credit Interest',\n",
-       " 'Public Employees Retirement System§PERS BENEFITS  - PERS CHECK',\n",
-       " 'Public Employees Retirement System§PERS BENEFITS  - PERS CHECK',\n",
-       " 'Transfer from Venmo§VENMO  - CASHOUT',\n",
-       " 'Interest Income§Credit Interest',\n",
-       " 'Interest Income§Credit Interest',\n",
-       " 'Interest Income§Credit Interest',\n",
-       " 'AMAZON MKTPL*Z74BF68Y2',\n",
-       " 'BI-MART 602',\n",
-       " 'Wise',\n",
-       " 'Prime Video Channels',\n",
-       " 'FMS DENTAL - OR',\n",
-       " 'AMAZON MKTPL*ZG5O05NS1',\n",
-       " 'SQ *AREKIE - INDIAN FUSIO',\n",
-       " 'Amazon.com*ZG8E137G0',\n",
-       " 'The Atlantic',\n",
-       " 'Audible*ZC66379S0',\n",
-       " 'ALASKA AIR  0272394992901',\n",
-       " 'IZUMI JAPANESE RESTAURANT',\n",
-       " 'CONDOR',\n",
-       " 'ALLIANZ TRAVEL INS',\n",
-       " 'CHOOOSE* ALASKA',\n",
-       " 'UOF*ATHLETICS',\n",
-       " 'UO ATHLETIC DEPT',\n",
-       " 'KING ESTATE WINERY',\n",
-       " 'AMERICAN AIR0012208886458',\n",
-       " 'AMERICAN AIR0012208886459',\n",
-       " 'ALLIANZ TRAVEL INS',\n",
-       " 'PY *PROVISIONS SOUTH 296 E 5TH AVE EUGENE 97401 OR USA',\n",
-       " 'SQ *MOUNTAIN ROSE HERB152 W. 5TH AVE STE. 3 EUGENE 97401 OR USA',\n",
-       " 'MARKET OF CHOICE #9 67 WEST 29TH AVE EUGENE 97405 OR USA',\n",
-       " 'ACH DEPOSIT INTERNET TRANSFER FROM ACCOUNT ENDING IN 9841',\n",
-       " 'SAFEWAY #4513 350 EAST 40TH EUGENE 97405 OR USA',\n",
-       " 'SAFEWAY #4513 350 EAST 40TH EUGENE 97405 OR USA',\n",
-       " 'MARKET OF CHOICE #9 67 WEST 29TH AVE EUGENE 97405 OR USA',\n",
-       " 'SQ *DOZO 1130 WEST 25TH AVENUE EUGENE 97405 OR USA',\n",
-       " 'SQ *THE GARDEN ON FRIE245 W BROADWAY EUGENE 97401 OR USA',\n",
-       " 'SQ *THE GARDEN ON FRIE245 W BROADWAY EUGENE 97401 OR USA']"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "[e.description for e in DB.select(Entry, start_date='2025-01-25') if e.account in DB.real_accounts]"
    ]
@@ -357,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc8d6160",
+   "id": "368f2da9",
    "metadata": {},
    "outputs": [],
    "source": []
