--- a/sandbox/misc.ipynb
+++ b/sandbox/misc.ipynb
@@ -2,13 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "43c1e4f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'find_t' from 'dexter.config' (/Users/conery/Projects/dexter/src/dexter/config.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdexter\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mDB\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DB, Entry, Category, Account\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdexter\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mconfig\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Config, initialize_config, load_toml_file, find_t\n\u001b[32m      4\u001b[39m DB.init()\n\u001b[32m      5\u001b[39m DB.open(\u001b[33m'\u001b[39m\u001b[33mfinances\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[31mImportError\u001b[39m: cannot import name 'find_t' from 'dexter.config' (/Users/conery/Projects/dexter/src/dexter/config.py)"
+     ]
+    }
+   ],
    "source": [
     "from dexter.DB import DB, Entry, Category, Account\n",
-    "from dexter.config import Config, inititialize_config, load_toml_file, find_toml_file\n",
+    "from dexter.config import Config, initialize_config, load_toml_file, find_toml_file\n",
     "\n",
     "DB.init()\n",
     "DB.open('finances')"
@@ -119,6 +131,37 @@
    ],
    "source": [
     "Config.CSV.colmaps['occu']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3f4375b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "setattr(Config.DB, \"foo\", 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "05287366",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Config.DB.foo"
    ]
   },
   {
