Clean up account name filters for select

--- a/sandbox/DB_accounts.ipynb
+++ b/sandbox/DB_accounts.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "1d119a3b",
    "metadata": {},
    "outputs": [
@@ -100,9 +100,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "expenses:food expenses\n",
-      "groceries expenses\n",
-      "restaurant expenses\n"
+      "<Ac expenses:food expenses >\n",
+      "<Ac expenses:food:groceries expenses groceries>\n",
+      "<Ac expenses:food:restaurant expenses restaurant>\n"
      ]
     }
    ],
