--- a/sandbox/misc.ipynb
+++ b/sandbox/misc.ipynb
@@ -494,8 +494,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "96f8f335",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 'expenses:car:fuel'.find('car')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "53d7eff7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'car:fuel'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'expenses:car:fuel'[i:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb250e7c",
    "metadata": {},
    "outputs": [],
    "source": []
